kubernetes/template/openslice-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openslice-ingress
  namespace: openslice
  annotations:
    kubernetes.io/ingress.class: "nginx"  
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/services"
        backend:    
          service:
            name: tmfweb
            port:
              number: 80
      - pathType: Prefix
        path: "/tmf-api"
        backend:
          service:
            name: osscapi
            port:
              number: 13082
      - pathType: Prefix
        path: "/auth"
        backend:
          service:
            name: keycloak
            port:
              number: 8080
      - pathType: Prefix
        path: "/nfvportal"
        backend:
          service:
            name: portalweb
            port:
              number: 80
      - pathType: Prefix
        path: "/osapi"
        backend:
          service:
            name: osportalapi
            port:
              number: 13000
